--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 
 
 <body>
+
    <header class="header">
       <div class="nav-container">
          <nav class="header-nav">
@@ -64,28 +65,74 @@
    </div>
 
 
-   <div class="para-hacer-espacio">
+   <!-- <div class="para-hacer-espacio"> -->
 
-      <div class="presentation-container">
-         <div class="whoWeAre-block">
-            <p class="who-we-are">Who we are?</p>
-         </div>
-
-         <div class="sub-presentation-container">
-            <img src="./img/Albercas para perros en la Ciudad de México.jpg   " class="presentation-image" alt="">
-            <div class="presentation-text-container">
-               <p>
-                  We are a family business focused on love. Our life changed since the arrival of Franco, our beautiful
-                  schnauzer, who brought us love and filled us with fun. Therefore we want to bring fun and quality to
-                  each pet in the country, so that they take care of making their owners happy.
-
-                  <!-- somos una empresa familiar centrada en el amor. Nuestra vida cambió desde la llegada de Franco, nuestro hermoso schnauzer, que nos trajó amor y nos llenó de diversion. Por ende queremos llevarle diversión y calidad a cada mascota del pais, para que ellos se encarguen de hacer felices a sus dueños :)  -->
-               </p>
-            </div>
-         </div>
+   <div class="presentation-container">
+      <div class="whoWeAre-block">
+         <p class="who-we-are montserrat-light">Who we are?</p>
       </div>
 
+      <div class="sub-presentation-container">
+         <img src="./img/Albercas para perros en la Ciudad de México.jpg   " class="presentation-image" alt="">
+         <div class="presentation-text-container montserrat-extra-light">
+            <p><strong>
+                  We are a family business who's in love with animals.
+               </strong>
+               <br>
+               Our life changed since the arrival of Franco, our
+               beautiful
+               schnauzer, who brought us love and filled us with fun. Therefore we want to bring fun and quality to
+               each pet in the country, so that they take care of making their owners happy.
+
+               <!-- somos una empresa familiar centrada en el amor. Nuestra vida cambió desde la llegada de Franco, nuestro hermoso schnauzer, que nos trajó amor y nos llenó de diversion. Por ende queremos llevarle diversión y calidad a cada mascota del pais, para que ellos se encarguen de hacer felices a sus dueños :)  -->
+            </p>
+            <p class="aclaration-xd">(She's not Franco.. She is our queen Kiara 👑)</p>
+         </div>
+      </div>
    </div>
+
+   <!-- </div> -->
+
+   <!-- <div class="para-hacer-espacio"> -->
+   <section class="location-section">
+      <div class="location-tittle-container">
+         <h3 class="location-tittle montserrat-light">Visit us! </h3>
+      </div>
+
+      <div class="location-bottomSection">
+         <div class="location-left">
+            <div class="located-container">
+               <p class="montserrat-light"><strong> We're located in:</strong></p>
+               <p class="montserrat-extra-light">Rio de Janeiro 300 </p>
+               <p class="montserrat-extra-light">Caballito - Bs. As.</p>
+            </div>
+
+            <div class="location-schedule">
+               <h5 class="montserrat-light"><u>Attention Schedule</u></h5>
+               <div>
+                  <p class="montserrat-extra-light">Monday - Saturday</p>
+                  <p class="montserrat-extra-light">8:00hs - 18:00hs</p>
+               </div>
+               <div class="sundays-holidays">
+                  <p class="montserrat-extra-light">Sundays | Holidays</p>
+                  <p class="montserrat-extra-light">8:00hs - 12:00hs</p>
+               </div>
+               <div class="yellow-bar"></div>
+            </div>
+         </div>
+
+         <div>
+            <iframe class="map"
+               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.6843537984964!2d-58.42959599664809!3d-34.612142405508834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcca429815227f%3A0x5d302e497c2cda87!2sR%C3%ADo%20de%20Janeiro%20300%2C%20C1405%20CCB%2C%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1617037494525!5m2!1ses-419!2sar"
+               width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+         </div>
+         <div class="yellow-border"></div>
+      </div>
+   </section>
+   <!-- </div> -->
+
+
 
    <footer class="footer">
       <div class="footer-main">
