--- a/index.html
+++ b/index.html
@@ -10,28 +10,51 @@
 </head>
 
 <body>
+
+   <header class="header">
+      <div class="nav-container">
+         <nav class="header-nav">
+            <a href="./home.html">Home</a>
+            <a href="./toyStore.html">Toy Store</a>
+            <a href="./pharmacy.html">Pharmacy</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./index.html">cards xD</a>
+         </nav>
+      </div>
+
+      <div class="header-tittle-container">
+         <p class="header-tittle">Franco's Petshop</p>
+         <!-- <p class="header-slogan">Your Pet, Our Passion </p> -->
+         <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+      </div>
+   </header>
+
    <div class="card-container">
-      <div class="card" id="card">
-         <!-- icons -->
-         <div class="info-icon-container">
-            <img src="./icons/info.png" class="info-icon" id="infoIcon" alt="">
-         </div>
-         <div class="carrito-icon-container" id="carritoIconContainer">
-            <img src="./icons/carrito.png" class="carrito-icon" id="carritoIcon" alt="">
-         </div>
-         <!-- img|texts|nrs -->
-         <div class="sub-card">
-            <img src="./img/product-image-1432090831_1024x1024.jpg" alt="" class="img">
-            <div class="text-container">
-               <p class="previous-price" id="previousPrice"><strong><del> $ 2.500</del></strong></p>
-               <div class="price-container" id="cardPriceContainer">
-                  <p class="price"><strong>$ 2.350</strong></p>
-                  <p class="discount"><strong> 13% OFF</strong></p>
-               </div>
-               <p class="last-units"><strong>Last Units!</strong></p>
+      <div class="card-border">
+
+
+         <div class="card" id="card">
+            <!-- icons -->
+            <div class="info-icon-container">
+               <img src="./icons/info.png" class="info-icon" id="infoIcon" alt="">
             </div>
-            <div class="product-name-container" id="productName">
-               <p class="product-name"><strong>Pelota interactiva de goma </strong></p>
+            <div class="carrito-icon-container" id="carritoIconContainer">
+               <img src="./icons/carrito.png" class="carrito-icon" id="carritoIcon" alt="">
+            </div>
+            <!-- img|texts|nrs -->
+            <div class="sub-card">
+               <img src="./img/product-image-1432090831_1024x1024.jpg" alt="" class="img">
+               <div class="text-container">
+                  <p class="previous-price" id="previousPrice"><strong><del> $ 2.500</del></strong></p>
+                  <div class="price-container" id="cardPriceContainer">
+                     <p class="price"><strong>$ 2.350</strong></p>
+                     <p class="discount"><strong> 13% OFF</strong></p>
+                  </div>
+                  <p class="last-units"><strong>Last Units!</strong></p>
+               </div>
+               <div class="product-name-container" id="productName">
+                  <p class="product-name"><strong>Pelota interactiva de goma </strong></p>
+               </div>
             </div>
          </div>
       </div>
