Fer no me pulles la pag todavia, no te la spoilees xD

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -14,7 +14,7 @@
       <div class="sub-header">
          <div class="nav-container">
             <nav class="header-nav">
-               <a href="./home.html">Home</a>
+               <a href="./index.html">Home</a>
                <a href="./toyStore.html">Toy Store</a>
                <a href="./pharmacy.html">Pharmacy</a>
                <a href="./contact.html">Contact</a>
