--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
    <header class="header">
       <div class="nav-container">
          <nav class="header-nav">
-            <a href="./home.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./toyStore.html">Toy Store</a>
             <a href="./pharmacy.html">Pharmacy</a>
             <a href="./contact.html">Contact</a>
@@ -87,7 +87,7 @@
             <div>
                <nav class="footer-nav">
                   <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./img/instagram.png" alt=".">
                   </a> <a href="#">
                      <img src="./img/instagram.png" alt="">
                   </a> <a href="#">
