--- a/index.html
+++ b/index.html
@@ -12,20 +12,22 @@
 
 <body>
 
-   <header class="header">
-      <div class="nav-container">
-         <nav class="header-nav">
-            <a href="./index.html">Home</a>
-            <a href="./toyStore.html">Toy Store</a>
-            <a href="./pharmacy.html">Pharmacy</a>
-            <a href="./contact.html">Contact</a>
-         </nav>
-      </div>
+   <div class="nav-container">
+      <nav class="header-nav">
+         <a href="./index.html">Home</a>
+         <a href="./toyStore.html">Toy Store</a>
+         <a href="./pharmacy.html">Pharmacy</a>
+         <a href="./contact.html">Contact</a>
+      </nav>
+   </div>
 
+   <header class="header">
       <div class="header-tittle-container">
-         <p class="header-tittle">Franco's Petshop</p>
-         <!-- <p class="header-slogan">Your Pet, Our Passion </p> -->
-         <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+         <img class="logo" src="./img/cropped-logo-champy-logo-a-1.png" alt="">
+         <div>
+            <p class="header-tittle">Franco's Petshop</p>
+            <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+         </div>
       </div>
    </header>
 
@@ -86,7 +88,7 @@
 
                <!-- somos una empresa familiar centrada en el amor. Nuestra vida cambió desde la llegada de Franco, nuestro hermoso schnauzer, que nos trajó amor y nos llenó de diversion. Por ende queremos llevarle diversión y calidad a cada mascota del pais, para que ellos se encarguen de hacer felices a sus dueños :)  -->
             </p>
-            <p class="aclaration-xd">(She's not Franco.. She is our queen Kiara 👑)</p>
+            <p class="aclaration-xd"> <strong> (She's not Franco.. She is our queen Kiara 👑)</strong></p>
          </div>
       </div>
    </div>
