--- a/pharmacy.html
+++ b/pharmacy.html
@@ -10,22 +10,22 @@
 </head>
 
 <body id="pharmacy">
-   <header class="header">
-      <div class="sub-header">
-         <div class="nav-container">
-            <nav class="header-nav">
-               <a href="./index.html">Home</a>
-               <a href="./toyStore.html">Toy Store</a>
-               <a href="./pharmacy.html">Pharmacy</a>
-               <a href="./contact.html">Contact</a>
-            </nav>
-         </div>
-      </div>
+   <div class="nav-container">
+      <nav class="header-nav">
+         <a href="./index.html">Home</a>
+         <a href="./toyStore.html">Toy Store</a>
+         <a href="./pharmacy.html">Pharmacy</a>
+         <a href="./contact.html">Contact</a>
+      </nav>
+   </div>
 
+   <header class="header">
       <div class="header-tittle-container">
-         <p class="header-tittle">Franco's Petshop</p>
-         <!-- <p class="header-slogan">Your Pet, Our Passion </p> -->
-         <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+         <img class="logo" src="./img/cropped-logo-champy-logo-a-1.png" alt="">
+         <div>
+            <p class="header-tittle">Franco's Petshop</p>
+            <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+         </div>
       </div>
    </header>
 
