--- a/toyStore.html
+++ b/toyStore.html
@@ -18,14 +18,14 @@
          <a href="./contact.html">Contact</a>
       </nav>
    </div>
-   <header class="header">
-      <!-- <div class="sub-header"> -->
-      <!-- </div> -->
 
+   <header class="header">
       <div class="header-tittle-container">
-         <p class="header-tittle">Franco's Petshop</p>
-         <!-- <p class="header-slogan">Your Pet, Our Passion </p> -->
-         <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+         <img class="logo" src="./img/cropped-logo-champy-logo-a-1.png" alt="">
+         <div>
+            <p class="header-tittle">Franco's Petshop</p>
+            <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+         </div>
       </div>
    </header>
 
