Todo caasi listo, solo commiteo x si las moscas xD

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
    <title>Contact</title>
    <link rel="stylesheet" href="styles/styles.css">
    <link rel="stylesheet" href="sweetalert2.min.css">
+   <link rel="shortcut icon" type="image/jpg" href="./img/cropped-logo-champy-logo-a-1.png" />
 </head>
 
 <body id="contact">
@@ -17,7 +18,7 @@
          <a href="./index.html">Home</a>
          <a href="./toyStore.html">Toy Store</a>
          <a href="./pharmacy.html">Pharmacy</a>
-         <a href="./contact.html">Contact</a>
+         <a href="./contact.html" class="active">Contact</a>
       </nav>
    </div>
 
@@ -94,27 +95,27 @@
 
    <footer class="footer">
       <div class="footer-main">
-
+         <!-- 
          <div class="flecha-icon-container">
             <img src="./img/flecha-arriba.png" class="flecha-icon" alt="">
-         </div>
+         </div> -->
 
          <div class="socialMedia-container">
             <div>
-               <p class="socialMedia-tittle">You can find us in:</p>
+               <p class="socialMedia-tittle">You can also find us in:</p>
             </div>
             <div>
                <nav class="footer-nav">
                   <a href="#">
-                     <img src="./img/instagram.png" alt=".">
-                  </a> <a href="#">
                      <img src="./img/instagram.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/youtube.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/facebook.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/pinterest.png" alt="">
+                  </a> <a href="#">
+                     <img src="./icons/marca.png" alt="">
                   </a>
                </nav>
             </div>
@@ -126,7 +127,9 @@
 
       </div>
    </footer>
-   <script src="sweetalert2.all.min.js"></script>
+
+   <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+   <!-- <script src="sweetalert2.all.min.js"></script> -->
    <script src="./scripts/main.js"></script>
 </body>
 
