--- a/pharmacy.html
+++ b/pharmacy.html
@@ -7,27 +7,32 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Pharmacy</title>
    <link rel="stylesheet" href="styles/styles.css">
+   <link rel="shortcut icon" type="image/jpg" href="./img/cropped-logo-champy-logo-a-1.png" />
+
 </head>
 
 <body id="pharmacy">
+
    <div class="nav-container">
       <nav class="header-nav">
          <a href="./index.html">Home</a>
          <a href="./toyStore.html">Toy Store</a>
-         <a href="./pharmacy.html">Pharmacy</a>
+         <a href="./pharmacy.html" class="active">Pharmacy</a>
          <a href="./contact.html">Contact</a>
       </nav>
    </div>
+
 
    <header class="header">
       <div class="header-tittle-container">
          <img class="logo" src="./img/cropped-logo-champy-logo-a-1.png" alt="">
          <div>
-            <p class="header-tittle">Franco's Petshop</p>
-            <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+            <p class="header-tittle">Pharmacy!</p>
+            <!-- <p class="header-slogan">Bringing Happiness to your Source of Happiness </p> -->
          </div>
       </div>
    </header>
+   <div class="pharmacy-img-container"></div>
 
    <div class="infoCards-section">
       <div class="infoCards-container">
@@ -50,7 +55,7 @@
                <img src="./img/cards 3.png" class="home-card-img" alt="">
             </div>
             <p class="infoCard-text1"><strong> Ship to Home</strong></p>
-            <p class="infoCard-text2">FREE shipping on orders over $49</p>
+            <p class="infoCard-text2">FREE shipping on orders over $1.000</p>
          </div>
          <div class="info-card">
             <div class="img-card-container">
@@ -64,16 +69,16 @@
 
 
    <div class="card-container">
-      <div class="card" id="card">
-         <!-- icons -->
-         <div class="info-icon-container">
-            <img src="./icons/info.png" class="info-icon" id="infoIcon" alt="">
+      <!-- <div class="card" id="card">
+      icons
+        <div class="info-icon-container"> -->
+      <!-- <img src="./icons/info.png" class="info-icon" id="infoIcon" alt="">
          </div>
          <div class="carrito-icon-container" id="carritoIconContainer">
-            <img src="./icons/carrito.png" class="carrito-icon" id="carritoIcon" alt="">
-         </div>
-         <!-- img|texts|nrs -->
-         <div class="sub-card">
+            <img src="./icons/carrito.png" class="carrito-icon" id="carritoIcon" alt="">  -->
+      <!-- </div> -->
+      <!-- img|texts|nrs -->
+      <!-- <div class="sub-card">
             <img src="./img/product-image-1432090831_1024x1024.jpg" alt="" class="img">
             <div class="text-container">
                <p class="previous-price" id="previousPrice"><strong><del> $ 2.500</del></strong></p>
@@ -86,8 +91,8 @@
             <div class="product-name-container" id="productName">
                <p class="product-name"><strong>Pelota interactiva de goma </strong></p>
             </div>
-         </div>
-      </div>
+         </div> -->
+      <!-- </div> -->
    </div>
 
 
@@ -96,34 +101,34 @@
 
    <footer class="footer">
       <div class="footer-main">
-
+         <!-- 
          <div class="flecha-icon-container">
             <img src="./img/flecha-arriba.png" class="flecha-icon" alt="">
-         </div>
+         </div> -->
 
          <div class="socialMedia-container">
             <div>
-               <p class="socialMedia-tittle">You can find us in:</p>
+               <p class="socialMedia-tittle">You can also find us in:</p>
             </div>
             <div>
                <nav class="footer-nav">
                   <a href="#">
                      <img src="./img/instagram.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/youtube.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/facebook.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/pinterest.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/marca.png" alt="">
                   </a>
                </nav>
             </div>
          </div>
 
          <div>
-            <p> © Designed and Developed by @_mateo.lorenzo_dev</p>
+            <p class="footer-text"> © Designed and Developed by @_mateo.lorenzo_dev</p>
          </div>
 
       </div>
