--- a/toyStore.html
+++ b/toyStore.html
@@ -7,27 +7,34 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Toy Store</title>
    <link rel="stylesheet" href="styles/styles.css">
+   <link rel="shortcut icon" type="image/jpg" href="./img/cropped-logo-champy-logo-a-1.png" />
+
 </head>
 
 <body id="toyStore">
    <div class="nav-container">
       <nav class="header-nav">
          <a href="./index.html">Home</a>
-         <a href="./toyStore.html">Toy Store</a>
+         <a href="./toyStore.html" class="active">Toy Store</a>
          <a href="./pharmacy.html">Pharmacy</a>
          <a href="./contact.html">Contact</a>
       </nav>
    </div>
+   <!-- <img src="./img/d324d95aa84072e834bfbce293d182f9.jpg" class="toyStore-img" alt=""> -->
 
    <header class="header">
       <div class="header-tittle-container">
          <img class="logo" src="./img/cropped-logo-champy-logo-a-1.png" alt="">
          <div>
-            <p class="header-tittle">Franco's Petshop</p>
-            <p class="header-slogan">Bringing Happiness to your Source of Happiness </p>
+            <p class="header-tittle">Toy Store!</p>
+            <!-- <p class="header-slogan">Bringing Happiness to your Source of Happiness </p> -->
          </div>
       </div>
    </header>
+
+   <div class="toyStore-img-container">
+   </div>
+
 
    <div class="infoCards-section">
       <div class="infoCards-container">
@@ -50,7 +57,7 @@
                <img src="./img/cards 3.png" class="home-card-img" alt="">
             </div>
             <p class="infoCard-text1"><strong> Ship to Home</strong></p>
-            <p class="infoCard-text2">FREE shipping on orders over $49</p>
+            <p class="infoCard-text2">FREE shipping on orders over $1.000</p>
          </div>
          <div class="info-card">
             <div class="img-card-container">
@@ -139,34 +146,34 @@
    </footer> -->
    <footer class="footer">
       <div class="footer-main">
-
+         <!-- 
          <div class="flecha-icon-container">
             <img src="./img/flecha-arriba.png" class="flecha-icon" alt="">
-         </div>
+         </div> -->
 
          <div class="socialMedia-container">
             <div>
-               <p class="socialMedia-tittle">You can find us in:</p>
+               <p class="socialMedia-tittle">You can also find us in:</p>
             </div>
             <div>
                <nav class="footer-nav">
                   <a href="#">
                      <img src="./img/instagram.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/youtube.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/facebook.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/pinterest.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/marca.png" alt="">
                   </a>
                </nav>
             </div>
          </div>
 
          <div>
-            <p> © Designed and Developed by @_mateo.lorenzo_dev</p>
+            <p class="footer-text"> © Designed and Developed by @_mateo.lorenzo_dev</p>
          </div>
 
       </div>
