--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Home</title>
    <link rel="stylesheet" href="styles/styles.css">
+   <link rel="shortcut icon" type="image/jpg" href="./img/cropped-logo-champy-logo-a-1.png" />
+
 </head>
 
 
@@ -14,7 +16,7 @@
 
    <div class="nav-container">
       <nav class="header-nav">
-         <a href="./index.html">Home</a>
+         <a href="./index.html" class="active">Home</a>
          <a href="./toyStore.html">Toy Store</a>
          <a href="./pharmacy.html">Pharmacy</a>
          <a href="./contact.html">Contact</a>
@@ -54,7 +56,7 @@
                <img src="./img/cards 3.png" class="home-card-img" alt="">
             </div>
             <p class="infoCard-text1"><strong> Ship to Home</strong></p>
-            <p class="infoCard-text2">FREE shipping on orders over $49</p>
+            <p class="infoCard-text2">FREE shipping on orders over $1.000</p>
          </div>
          <div class="info-card">
             <div class="img-card-container">
@@ -88,7 +90,9 @@
 
                <!-- somos una empresa familiar centrada en el amor. Nuestra vida cambió desde la llegada de Franco, nuestro hermoso schnauzer, que nos trajó amor y nos llenó de diversion. Por ende queremos llevarle diversión y calidad a cada mascota del pais, para que ellos se encarguen de hacer felices a sus dueños :)  -->
             </p>
-            <p class="aclaration-xd"> <strong> (She's not Franco.. She is our queen Kiara 👑)</strong></p>
+            <p class="aclaration-xd"> <strong> (She's not Franco.. She is our queen Kiara 👑. We love her too
+                  xD)</strong>
+            </p>
          </div>
       </div>
    </div>
@@ -138,34 +142,34 @@
 
    <footer class="footer">
       <div class="footer-main">
-
+         <!-- 
          <div class="flecha-icon-container">
-            <img src="./img/flecha-arriba.png" class="flecha-icon" alt=".">
-         </div>
+            <img src="./img/flecha-arriba.png" class="flecha-icon" alt="">
+         </div> -->
 
          <div class="socialMedia-container">
             <div>
-               <p class="socialMedia-tittle">You can find us in:</p>
+               <p class="socialMedia-tittle">You can also find us in:</p>
             </div>
             <div>
                <nav class="footer-nav">
                   <a href="#">
                      <img src="./img/instagram.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/youtube.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/facebook.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/pinterest.png" alt="">
                   </a> <a href="#">
-                     <img src="./img/instagram.png" alt="">
+                     <img src="./icons/marca.png" alt="">
                   </a>
                </nav>
             </div>
          </div>
 
          <div>
-            <p> © Designed and Developed by @_mateo.lorenzo_dev</p>
+            <p class="footer-text"> © Designed and Developed by @_mateo.lorenzo_dev</p>
          </div>
 
       </div>
